# rust-option-result-examples

./: Cargo.toml  README.md
src/: main1.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs
